# trail-mate

./: .gitattributes  .gitignore  .gitnexusignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  README_CN.md  platformio.ini
.github/workflows/: cardputer-zero-linux.yml  chatops-ask.lock.yml  chatops-ask.md  chatops-plan.lock.yml  chatops-plan.md  ci-doctor.lock.yml  ci-doctor.md  ci.yml  code-simplifier.lock.yml  code-simplifier.md  contribution-check.lock.yml  contribution-check.md  daily-repo-status.lock.yml  daily-repo-status.md  doc-updater.lock.yml  doc-updater.md  hardware-compat-tracker.lock.yml  hardware-compat-tracker.md  issue-triage.lock.yml  issue-triage.md  linux-simulator.yml  security-scan.lock.yml  security-scan.md  test-improver.lock.yml  test-improver.md
apps/: README.md
apps/esp32_lvgl/: APP_SHELL_MANIFEST.md  CMakeLists.txt  README.md  library.json
apps/esp32_lvgl/src/: esp32_lvgl_app_shell.cpp  esp32_lvgl_app_shell.h  esp32_lvgl_arduino_startup_runtime.cpp  esp32_lvgl_idf_app_facade_runtime.cpp  esp32_lvgl_idf_app_facade_runtime.h  esp32_lvgl_idf_app_registry.cpp  esp32_lvgl_idf_app_runtime_access.cpp  esp32_lvgl_idf_app_runtime_access.h  esp32_lvgl_loop_runtime.cpp  esp32_lvgl_runtime_config.cpp  esp32_lvgl_startup_runtime.cpp
apps/esp32_lvgl/tests/: esp32_lvgl_app_shell_smoke.cpp  esp32_lvgl_runtime_config_smoke.cpp  esp32_lvgl_sd_coredump_contract_smoke.cpp
apps/linux_cardputer_zero/: APP_SHELL_MANIFEST.md  CMakeLists.txt  README.md
apps/linux_cardputer_zero/packaging/: trailmate-cardputer-zero-applaunch  trailmate-cardputer-zero.desktop
apps/linux_cardputer_zero/src/: cardputer_zero_input_method_port.cpp  cardputer_zero_input_method_port.h  cardputer_zero_main.cpp  cardputer_zero_notification_port.cpp  cardputer_zero_notification_port.h  cardputer_zero_wayland_main.cpp  linux_cardputer_zero_app_shell.cpp  linux_cardputer_zero_app_shell.h
apps/linux_cardputer_zero/src/platform/wayland/: wayland_presenter.cpp  wayland_presenter.h
apps/linux_cardputer_zero/tests/: linux_cardputer_zero_app_shell_smoke.cpp  linux_cardputer_zero_business_wiring_smoke.cpp  linux_cardputer_zero_packaging_smoke.cpp
apps/linux_cardputer_zero/tools/: Dockerfile.cardputer-zero-builder  build_cardputer_zero_deb.sh  cardputer_zero_deb_package_entrypoint.sh  cardputer_zero_screenshot_capture.cpp  compose.cardputer-zero-builder.yml
apps/linux_sim_shell/: CMakeLists.txt  README.md
apps/linux_sim_shell/src/: linux_sim_app_shell.cpp  linux_sim_app_shell.h  linux_sim_runtime_entry.cpp  linux_sim_runtime_entry.h  linux_sim_runtime_entry_adoption_probe.cpp  linux_sim_runtime_entry_adoption_probe.h  linux_sim_runtime_renderer.cpp  linux_sim_runtime_renderer.h
apps/linux_sim_shell/tests/: linux_sim_app_shell_smoke.cpp  linux_sim_runtime_entry_adoption_probe_smoke.cpp  linux_sim_runtime_entry_smoke.cpp  linux_sim_runtime_renderer_smoke.cpp
apps/linux_uconsole/: CMakeLists.txt  README.md
apps/linux_uconsole_gtk/: CMakeLists.txt  README.md
apps/nrf52_node/: APP_SHELL_MANIFEST.md  README.md  library.json
boards/: lilygo_t_echo_lite_nrf52840.json
boards/cardputerzero/: BOARD.md  board_facts.h
boards/gat562_mesh_evb_pro/: library.json
boards/t_display_p4/: BOARD.md  README.md  board_facts.h
boards/t_echo_lite/: BOARD.md  board_facts.h  library.json
boards/tab5/: BOARD.md  README.md
boards/tdeck/: library.json
boards/tdisplayp4/: BOARD.md
boards/tlora_pager/: BOARD.md  board_facts.h
builds/esp_idf/: ESP_IDF_COMPONENT_SOURCES.cmake  README.md  target_profiles.cmake
builds/esp_idf/main/: CMakeLists.txt  idf_entry.cpp
builds/linux_cmake/: CMakeLists.txt  CMakePresets.json
builds/pio_nrf52/: platformio.ini
cmake/: TrailMateLinuxSources.cmake  TrailMateUxPacks.cmake
docs/: C6.md  agentic-workflows.md
docs/archive/: REMOVED_LEGACY_ROOTS.md
docs/audits/: CHAT_DELIVERY_EVENT_PROJECTION_AUDIT.md  CHAT_LEGACY_DELIVERY_BURN_DOWN_AUDIT.md  CHAT_RUNTIME_EVENT_PUMP_AUDIT.md  CHAT_UI_CONTROLLER_BURNDOWN_AUDIT.md  ESP_IDF_FINAL_OWNER_MIGRATION_PLAN.md  ESP_IDF_TARGET_DEFAULTS_MIGRATION_AUDIT.md  GPS_CONSUMER_BOUNDARY_AUDIT.md  KEY_VERIFICATION_MAP_OVERLAY_LEGACY_BURN_DOWN_AUDIT.md  LEGACY_BURNDOWN_REGISTER.md  LEGACY_COMPAT_TEMP_SURFACE_INVENTORY.md  LEGACY_COMPAT_TEMP_SURFACE_SCAN.md  MAP_OVERLAY_ROUTE_TRACKER_OWNERSHIP_AUDIT.md  MAP_PRESENTATION_BOUNDARY_AUDIT.md  MAP_TILE_SOURCE_CACHE_OWNERSHIP_AUDIT.md  MAP_UI_LEGACY_OWNERSHIP_AUDIT.md  PHASE10_FINAL_PRIMARY_PATH_REPORT.md  PHASE10_PRIMARY_PATH_MIGRATION_REPORT.md  PHASE11_RENDERER_DESCRIPTOR_CONSUMPTION_REPORT.md  PHASE12_DEPRECATED_ALIAS_CLEANUP_PLAN.md  PHASE12_FALLBACK_DELETION_READINESS.md  PHASE5_LEGACY_ISLAND_REGISTER.md  PHASE5_PRESENTATION_BOUNDARY_SUMMARY.md  PHASE5_PRESENTATION_CONFORMANCE_MATRIX.md  PHASE7_10_MAP_TILE_SOURCE_CACHE_BURNDOWN_REPORT.md  PHASE7_12_MAP_OVERLAY_ROUTE_TRACKER_REPORT.md  PHASE7_6_LEGACY_BURNDOWN_REPORT.md  PHASE7_8_TEAM_RICH_PAYLOAD_BURNDOWN_REPORT.md  PHASE7_9_TEAM_POSITION_PICKER_BURNDOWN_REPORT.md  PHASE7_FINAL_LEGACY_SURFACE_MATRIX.md  PHASE7_FINAL_RUNTIME_OWNERSHIP_READINESS_REPORT.md  PHASE7_RUNTIME_OWNERSHIP_REGISTER.md  PHASE9_FALLBACK_CONTAINMENT_LEDGER.md  PHASE9_FINAL_READINESS_REPORT.md  PHASE9_LEGACY_BURNDOWN_REPORT.md  PHASE9_RUNTIME_ADOPTION_REPORT.md  PHASE9_RUNTIME_ENTRY_ADOPTION_REPORT.md  POST_REFACTOR_FINAL_CLOSEOUT_REPORT.md  PRODUCT_COMPOSITION_BOUNDARY_AUDIT.md  PROTOCOL_ADAPTER_DRIFT_AUDIT.md  RELEASE_0_1_28_ALPHA_FIX_AUDIT.md  (+10 more)
docs/boards/: t-lora-pager.board.yaml
docs/devices/: esp32-sd-debug-coredump.md  gps-settings-guide.md  lilygo-t-lora-pager.md  lilygo-tdeck-gps-uart-lora-noise.md
firmware/c6_companion/components/tm_hostlink/: CMakeLists.txt  tm_hostlink.c  tm_hostlink_sdio.c
firmware/c6_companion/components/tm_hostlink/include/: tm_c6_companion_config.h  tm_hostlink.h  tm_hostlink_sdio.h
scripts/: build_pack_repository.py  check_root_build_artifacts.py  platformio-pre.py  webflash_targets.py
site/: index.html  main.js  styles.css
tools/: compress_lvgl_bitmap_font.py  validate_locale_packs.py
(+825 files in other folders)
